# RouteAgent

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release-to-pypi.yml
routeagent/: __init__.py  prompts.py  router.py
tests/: test_route_agent.py
